<?xml version="1.0"?>
<package format="2">

	<name>ros_utils</name>
	<version>1.0.0</version>
	<description>Collection of modern utilities for the ROS/Gazebo/MoveIt workflow</description>

	<author email="martinandrovich@gmail.com">Martin Androvich</author>
	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<maintainer email="martinandrovich@gmail.com">Martin Androvich</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/martinandrovich/ros_utils</url>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- ROS packages -->
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>cv_bridge</depend>
	<depend>eigen_conversions</depend>
	<depend>sensor_msgs</depend>
	<depend>geometric_shapes</depend>
	<depend>gazebo_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_msgs</depend>
	<depend>moveit_core</depend>

	<!-- libraries -->
	<depend>OpenCV</depend>
	<depend>PCL</depend>
	<depend>Eigen3</depend>

</package>
